--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,65 +1,7 @@
-$black: #272727;
-$red: #ED3232;
-$blue: #0053AB;
-$green: #25AF7C;
-$darkblue: #09132E;
-$lightblue: #1278D3;
-$lightbg: #F7F7F7;
-$yellow: #F4B706;
-$lighterblue: #34ACFF;
-$bordercolor: #D7D6D7;
-$uglyred: #FE6565;
 
-$robotoslab: "Roboto Slab", sans-serif;
-$roboto: "Roboto", sans-serif;
-$opensans: "Open Sans", sans-serif;
+$imagesPath: "/node_modules/@gobdigital-cl/gob.cl/dist/images/";
+$fontsPath: "/node_modules/@gobdigital-cl/gob.cl/dist/fonts/";
+$iconsPath: "/node_modules/@gobdigital-cl/gob.cl/dist/images/icons/";
 
-.h1 {
-	font-family: $robotoslab;
-	font-size: 36px;
-	line-height: 1.3;
-}
-.h2 {
-	font-family: $robotoslab;
-	font-size: 28px;
-	line-height: 1.3;
-}
-/*
-// Body
-$body-bg: #f5f8fa;
-
-// Borders
-$laravel-border-color: darken($body-bg, 10%);
-$list-group-border: $laravel-border-color;
-$navbar-default-border: $laravel-border-color;
-$panel-default-border: $laravel-border-color;
-$panel-inner-border: $laravel-border-color;
-
-// Brands
-$brand-primary: #3097D1;
-$brand-info: #8eb4cb;
-$brand-success: #2ab27b;
-$brand-warning: #cbb956;
-$brand-danger: #bf5329;
-
-// Typography
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
-$font-family-sans-serif: "Raleway", sans-serif;
-$font-size-base: 14px;
-$line-height-base: 1.6;
-$text-color: #636b6f;
-
-// Navbar
-$navbar-default-bg: #fff;
-
-// Buttons
-$btn-default-color: $text-color;
-
-// Inputs
-$input-border: lighten($text-color, 40%);
-$input-border-focus: lighten($brand-primary, 25%);
-$input-color-placeholder: lighten($text-color, 30%);
-
-// Panels
-$panel-default-heading-bg: #fff;
-*/
+@import "../../../node_modules/@gobdigital-cl/gob.cl/src/scss/variables";
+@import "../../../node_modules/@gobdigital-cl/gob.cl/src/scss/functions";
